--- a/app/templates/Person/add.latte
+++ b/app/templates/Person/add.latte
@@ -120,8 +120,8 @@
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                {label preaching_zone_1 /}
-                                                {input preaching_zone_1, class => "form-control", tabindex => 15}                                        
+                                                {label preaching_zone_1_id /}
+                                                {input preaching_zone_1_id, class => "form-control", tabindex => 15}                                        
                                             </div> 
                                         </div>
                                     </div>
@@ -134,8 +134,8 @@
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                {label preaching_zone_2 /}
-                                                {input preaching_zone_2, class => "form-control", tabindex => 16}                                        
+                                                {label preaching_zone_2_id /}
+                                                {input preaching_zone_2_id, class => "form-control", tabindex => 16}                                        
                                             </div> 
                                         </div>
                                     </div>
@@ -148,8 +148,8 @@
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                {label preaching_zone_3 /}
-                                                {input preaching_zone_3, class => "form-control", tabindex => 17}                                        
+                                                {label preaching_zone_3_id /}
+                                                {input preaching_zone_3_id, class => "form-control", tabindex => 17}                                        
                                             </div> 
                                         </div>
                                     </div>
@@ -160,44 +160,18 @@
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                {label membership_level /}
-                                                {input membership_level, class => "form-control", tabindex => 18}                                        
-                                            </div> 
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                {label preaching_zone_1 /}
-                                                {input preaching_zone_1, class => "form-control", tabindex => 15}                                        
+                                                {label membership_category_id /}
+                                                {input membership_category_id, class => "form-control", tabindex => 18}                                        
                                             </div> 
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-group">
-                                                {label leader_id /}
-                                                {input leader_id, class => "form-control", tabindex => 13}                                        
+                                                {label membership_level_id /}
+                                                {input membership_level_id, class => "form-control", tabindex => 18}                                          
                                             </div> 
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                {label preaching_zone_2 /}
-                                                {input preaching_zone_2, class => "form-control", tabindex => 16}                                        
-                                            </div> 
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                {label center_id /}
-                                                {input center_id, class => "form-control", tabindex => 14}                                        
-                                            </div> 
-                                        </div>
-                                        <div class="col-lg-6">
-                                            <div class="form-group">
-                                                {label preaching_zone_3 /}
-                                                {input preaching_zone_3, class => "form-control", tabindex => 17}                                        
-                                            </div> 
-                                        </div>
+                                        </div>                                    
                                     </div>
                                 </fieldset>
                             {/form}
