--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,6 +12,13 @@
 .nopadding-right {
   padding-right: 0;
 }
+.ibox-title.empty {
+  padding: 0;
+  min-height: 0;
+}
+label.error {
+  margin-bottom: 0px;
+}
 .i-checks .radiolist label {
   cursor: pointer;
   line-height: 20px;
