--- a/www/less/forms.less
+++ b/www/less/forms.less
@@ -1,3 +1,12 @@
+.ibox-title.empty {
+	padding: 0;
+	min-height: 0;	
+}
+
+label.error {
+	margin-bottom: 0px;
+} 
+
 .i-checks {
 	.radiolist label {
 		cursor: pointer;
