--- a/www/less/result.less
+++ b/www/less/result.less
@@ -1,3 +1,28 @@
+.dropdown-form {
+	width: 240px;
+	padding: 10px 10px 0px 10px;
+
+	label {
+		margin-right: 4px;
+		font-size: 13px;
+	}
+
+	input {
+		font-size: 13px;
+	}
+
+	input[type=text] {
+		width: 171px;
+	}
+
+	input[type=submit] {
+		margin-top: 3px;
+		padding-top: 3px;
+		padding-bottom: 3px;
+		float: right;
+	}
+}
+
 .week-input {
 	font-weight: bold;
 	float: left;
@@ -25,3 +50,14 @@
 	}
 }
 
+#resultsTable {
+	thead, tfood {
+		th.wide {
+			 width: 50%;
+		}
+	}
+
+	.sort-helper {
+		display: none;
+	}
+}
