--- a/www/css/style.css
+++ b/www/css/style.css
@@ -12,6 +12,24 @@
 .nopadding-right {
   padding-right: 0;
 }
+.main-ajax-spinner {
+  opacity: 0;
+  top: 5px;
+  left: 3px;
+  transition: 0.6s;
+}
+.main-ajax-spinner.visible {
+  opacity: 1;
+  transition: 0.6s;
+}
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
 .ibox-title.empty {
   padding: 0;
   min-height: 0;
@@ -40,6 +58,26 @@ label.error {
 .form-group.padding-checkbox {
   padding-top: 14px;
 }
+.dropdown-form {
+  width: 240px;
+  padding: 10px 10px 0px 10px;
+}
+.dropdown-form label {
+  margin-right: 4px;
+  font-size: 13px;
+}
+.dropdown-form input {
+  font-size: 13px;
+}
+.dropdown-form input[type=text] {
+  width: 171px;
+}
+.dropdown-form input[type=submit] {
+  margin-top: 3px;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  float: right;
+}
 .week-input {
   font-weight: bold;
   float: left;
@@ -61,4 +99,11 @@ label.error {
 }
 .week-number a:nth-child(-n+9) {
   width: 15px;
+}
+#resultsTable thead th.wide,
+#resultsTable tfood th.wide {
+  width: 50%;
+}
+#resultsTable .sort-helper {
+  display: none;
 }
