--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -16,3 +16,24 @@
 .nopadding-right{
 	padding-right: 0;	
 }
+
+.main-ajax-spinner {
+	opacity: 0;
+	top: 5px;
+	left: 3px;
+	transition: 0.6s;
+
+	&.visible {
+		opacity: 1;
+		transition: 0.6s;
+	}
+}
+
+.noselect {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
