table sorter fix

--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -53,10 +53,10 @@
                                     {block resultTable_head}
                                     <tr>
                                         <th class="wide noselect">Jméno</th>
-                                        <th class="noselect">Mahá</th>
-                                        <th class="noselect">Big</th>
-                                        <th class="noselect">Medium</th>
-                                        <th class="noselect">Small</th>
+                                        <th class="noselect" data-type="numeric">Mahá</th>
+                                        <th class="noselect" data-type="numeric">Big</th>
+                                        <th class="noselect" data-type="numeric">Medium</th>
+                                        <th class="noselect" data-type="numeric">Small</th>
                                         <th data-hide="all">Company</th>
                                         <th data-hide="all">Completed</th>
                                         <th data-hide="all">Task</th>
