--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -37,3 +37,13 @@
 	-ms-user-select: none;
 	user-select: none;
 }
+
+.nopadding {
+	padding: 0;
+}
+
+.table {
+	th.controls {
+		width: 10px;
+	}
+}
