--- a/app/templates/Sign/in.latte
+++ b/app/templates/Sign/in.latte
@@ -13,7 +13,18 @@
 
     <link href="{$basePath}/css/animate.css" rel="stylesheet">
     <link href="{$basePath}/css/style.css" rel="stylesheet">
-
+    <style>
+        .logo-bottom {
+            color: #e6e6e6;
+            font-size: 25px;
+            letter-spacing: 8px;
+            margin: -96px -25px 76px 225px;
+            -webkit-transform: rotate(-90deg);
+            -moz-transform: rotate(-90deg);
+            -ms-transform: rotate(-90deg);
+            -o-transform: rotate(-90deg);
+        }
+    </style>
 </head>
 
 <body class="gray-bg">
@@ -22,10 +33,11 @@
         <div>
             <div>
 
-                <h1 class="logo-name">SKT</h1>
-
+                <h1 class="logo-name">
+                    SKT
+                </h1>
+                <p class="logo-bottom"> score </p>
             </div>
-            <h3>SKT Score</h3>
             <p>Perfektní a moderní program pro správu a zadávání sankírtanových výsledků
                 <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
             </p>
