--- a/app/templates/Sign/in.latte
+++ b/app/templates/Sign/in.latte
@@ -14,8 +14,10 @@
     <link href="{$basePath}/css/animate.css" rel="stylesheet">
     <link href="{$basePath}/css/style.css" rel="stylesheet">
     <style>
+        .logo-name { color: #cccccc; }
+
         .logo-bottom {
-            color: #e6e6e6;
+            color: #cccccc;
             font-size: 25px;
             letter-spacing: 8px;
             margin: -96px -25px 76px 225px;
@@ -32,11 +34,8 @@
     <div class="middle-box text-center loginscreen animated fadeInDown">
         <div>
             <div>
-
-                <h1 class="logo-name">
-                    SKT
-                </h1>
-                <p class="logo-bottom"> score </p>
+                <h1 class="logo-name">SKT</h1>
+                <p class="logo-bottom">score</p>
             </div>
             <p>Perfektní a moderní program pro správu a zadávání sankírtanových výsledků
                 <!--Continually expanded and constantly improved Inspinia Admin Them (IN+)-->
