--- a/www/less/layout.less
+++ b/www/less/layout.less
@@ -44,6 +44,15 @@
 
 .table {
 	th.controls {
-		width: 10px;
+		width: 46px;
+	}
+
+	td.controls {
+		a {
+			float: left;
+			&:not(:last-child) {
+				margin-right: 3px;
+			}
+		}
 	}
 }
