--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>SKT</title>
+    <title>{block title|striptags}{/block} | SKT Score</title>
 
     <link href="{$basePath}/css/bootstrap.min.css" rel="stylesheet">
     <link href="{$basePath}/font-awesome/css/font-awesome.css" rel="stylesheet">
@@ -124,6 +124,7 @@
     <script src="{$basePath}/js/inspinia.js"></script>
     <script src="{$basePath}/js/plugins/pace/pace.min.js"></script>
     <script src="{$basePath}/js/jquery.nette.js"></script>
+    <script src="{$basePath}/js/main.js"></script>
 
     <!-- Toastr script -->
     <script src="{$basePath}/js/plugins/toastr/toastr.min.js"></script>
