--- a/app/templates/Person/form.latte
+++ b/app/templates/Person/form.latte
@@ -11,7 +11,7 @@
                     <div class="ibox-title empty">
                     </div>
                     <div class="ibox-content">
-                        {form personForm, class => "form-horizontal"}
+                        {form form, class => "form-horizontal"}
                             <div class="form-group">
                                 {label data-name, class => "col-sm-2 control-label" /}
                                 <div class="col-sm-10">
@@ -41,9 +41,9 @@
 				required: "Toto pole je povinné.",
 			});
 
-            $("#frm-personForm").validate();
+            $("#frm-form").validate();
 
         });
         
     </script>
-{/block}
+{/block}  
