--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -13,13 +13,7 @@
 {block content}
         <div class="row wrapper border-bottom white-bg page-heading">
             <div class="col-lg-12 nopadding-right">
-                <h2>Výsledky 2016</h2>
-                <strong style="float: left;">Týden:</strong>
-				<nav class="week-number">
-				{for $week_number = 1; $week_number <= $weeks_in_year; $week_number++}
-					<a href="#">{$week_number}</a>
-				{/for}
-				</nav>
+                <h2 n:block="title">Výsledky 2016</h2>
             </div>
 
         </div>
@@ -36,13 +30,13 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-form">
                                     <li>
-                                        {snippet personForm}
-                                            {form personForm}
-                                                {label name /}
-                                                {input name, autocomplete => "off"}
-                                                {input send, class => "btn btn-primary"}
-                                            {/form}
-                                        {/snippet}
+                                    {snippet personForm}
+                                        {form personForm}
+                                            {label name /}
+                                            {input name, autocomplete => "off"}
+                                            {input send, class => "btn btn-primary"}
+                                        {/form}
+                                    {/snippet}
                                     </li>
                                 </ul>
                             </div>
@@ -114,29 +108,6 @@
         $(document).ready(function() {
             bindWeekPicker('#week_from_input');
             $('#resultsTable').footable();
-
-            $('body').on('submit', '#frm-personForm', function( event ) {
-                $.ajax({
-                    type: "POST",
-                    url: $(this).attr("action"),
-                    data: $(this).serialize(),
-                    success: function(payload) {                   
-                        $.nette.success(payload);
-                        if(payload.success)
-                            AddRow(payload.name);
-                    }
-                });
-                event.preventDefault();
-            });
-            
-	        function AddRow(name) {
-	            $('#resultsTable').dataTable().fnAddData( [
-	                name,
-	                0,
-	                0,
-	                0,
-	                0] );
-	        }
         });
     </script>
 {/block}
