--- a/www/less/result.less
+++ b/www/less/result.less
@@ -60,4 +60,43 @@
 	.sort-helper {
 		display: none;
 	}
+
+	.footable-row-detail-name {
+		display: none;
+	}
+
+	input.number {
+		width: 100px;
+		height: 27px;
+		margin: 2px 0 0 15px;
+	}
+
+
+
+	.result-inputs {
+		margin-left: 10px;
+		float: left;
+		margin-right: 50px;
+
+		tr {
+			height: 30px;
+
+			th {
+				padding-right: 25px;
+			}
+		}
+
+		label {
+			margin: 0;
+		}
+	}	
 }
+
+	.footable-row-detail-cell {
+		.submit {
+			height: 27px;
+			padding: 3px 3px 3px 8px;
+			width: 80px;
+			color: red !important;
+		}
+	}
