--- a/www/less/result.less
+++ b/www/less/result.less
@@ -61,17 +61,19 @@
 		display: none;
 	}
 
+	.footable-row-detail-cell {
+		.submit {
+			width: 200px;
+			margin-left: 10px;
+			margin-top: 15px;
+			clear: both;
+			float: left;
+		}
+	}
+
 	.footable-row-detail-name {
 		display: none;
 	}
-
-	input.number {
-		width: 100px;
-		height: 27px;
-		margin: 2px 0 0 15px;
-	}
-
-
 
 	.result-inputs {
 		margin-left: 10px;
@@ -86,17 +88,15 @@
 			}
 		}
 
+		input.number {
+			width: 100px;
+			height: 27px;
+			margin: 2px 0 0 15px;
+			padding: 3px 3px 3px 8px;
+		}
+
 		label {
 			margin: 0;
 		}
 	}	
 }
-
-	.footable-row-detail-cell {
-		.submit {
-			height: 27px;
-			padding: 3px 3px 3px 8px;
-			width: 80px;
-			color: red !important;
-		}
-	}
